# sawyer_ws

./: .rosinstall  .rosinstall.bak
ati_netft_ros_driver/: README.md
ati_netft_ros_driver/netft_rdt_driver/config/: force_torque_sensor_controller.yaml
ati_netft_ros_driver/netft_rdt_driver/src/: netft_node.cpp  netft_rtt_controller.cpp
force-torque-sensor/: force-torque-sensor
force-torque-sensor/ATI_FTSensors/src/: FTSensors.cpp
force-torque-sensor/ATI_FTSensors/test/: LICENSE.txt
force-torque-sensor/launch/: display_simulation.launch
force-torque-sensor/model/: ft_sensor.gazebo.xacro
force-torque-sensor/model/meshes/: axia80.blend  axia80.blend1  axia80.stl
force-torque-sensor/src/: ati_ft_sensor_hw.cpp
force-torque-sensor/test/: simple_reader.cpp
polish_sr300/: CMakeLists.txt  polish_sr300
polish_sr300/config/: realsense_rgbd_pointcloud.rviz  sawyer_polish.rviz  sawyer_polish_ft.rviz
polish_sr300/launch/: routine_test.launch  sawyer_polish_world.launch
polish_sr300/scripts/: README.md  TCST17_mod.py  TCST17_mod2.py  intera.sh  joint_vel_SlidingMode_Hyb_Col_Polish.py  surface_follow.py  test_transform.py  utilities.py
polish_sr300/src/: example_clouds.cpp  manipulate_cloud_transform.cpp
polish_sr300/urdf/: buff_pad.urdf.xacro  hardcode3.urdf  hardcode4.urdf  result_def.urdf
polish_sr300/worlds/: sawyer_polish.world
sawyer_pykdl/: package.xml
sawyer_pykdl/src/sawyer_pykdl/: __init__.py  sawyer_pykdl.py
sawyer_robot/sawyer_description/urdf/: right_eraser_force_torque_gazebo.urdf.xacro  sawyer_base.urdf.xacro  sawyer_force_torque.urdf.xacro
sawyer_simulator/sawyer_gazebo/launch/: sawyer_world_force_torque.launch
sawyer_simulator/sawyer_sim_controllers/config/: sawyer_sim_controllers.yaml
sawyer_simulator/sawyer_sim_examples/launch/: sawyer_force_torque_demo.launch
sawyer_simulator/sawyer_sim_examples/scripts/: arm_teleop.py  pid.py
src/: gazebo_sim.txt
src/ati_netft_ros_driver/netft_rdt_driver/: CMakeLists.txt  package.xml
src/ati_netft_ros_driver/netft_rdt_driver/config/: netft_rrt_controller.ops
src/ati_netft_ros_driver/netft_rdt_driver/include/netft_rdt_driver/: netft_hardware_interface.h
src/ati_netft_ros_driver/netft_rdt_driver/launch/: netft_rrt_controller.launch
src/ati_netft_ros_driver/netft_rdt_driver/script/: Subscriber.py
src/ati_netft_ros_driver/netft_rdt_driver/src/: netft_hardware_interface.cpp
src/force-torque-sensor/ATI_FTSensors/: LICENSE.txt
src/force-torque-sensor/model/: ft_raw_test.gazebo.xacro  ft_sensor.urdf.xacro  ft_sensor_ati.urdf.xacro  ft_sensor_ati_ns.urdf.xacro  ft_sensor_ns.gazebo.xacro  models.urdf.xacro
src/force-torque-sensor/robot/: nano17.urdf.xacro
src/polish_sr300/: package.xml
src/polish_sr300/data/: real_sawyer.bag  simulator_sawyer.bag
src/polish_sr300/scripts/: ASME17_mod.py  CEP18_mod.py  IK_Sample.py  IROS18_mod.py  ISA_T18_mod.py  JMEC17_mod.py  RAS18_mod.py  RCIM18_mod.py  TCST17.py  flag_listener_test.py
src/polish_sr300/src/: manipulate_cloud.cpp  transform_cloud.cpp
src/polish_sr300/urdf/: ft_sensor_test.urdf.xacro  hardcode.urdf  hardcode2.urdf  hardcode5.urdf  kinect.urdf.xacro  polishing_tool_force_torque.urdf.xacro  result_mod.urdf  sawyer_base_polish.gazebo.xacro  sawyer_base_polish.urdf.xacro  sawyer_polish.urdf.xacro  tool_adapt.urdf.xacro
src/polish_sr300/worlds/: sawyer_polish_table.world
src/sawyer_pykdl/: CMakeLists.txt  setup.py
src/sawyer_pykdl/scripts/: sawyer_kinematics.py
src/sawyer_pykdl/src/sawyer_pykdl/: sawyer_pykdl.py
src/sawyer_teleop/: CMakeLists.txt  README.md  package.xml
src/sawyer_teleop/config/: gamepad.yaml
src/sawyer_teleop/launch/: teleop_gamepad.launch
(+48 files in other folders)
